Creating sample project. BulkOperation.cs is cleared. need to make ready

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /Sample_Project/.vs/Bulk-Operation-Using-CSharp-Reflection/v15
+/Sample_Project/Bulk-Operation-Using-CSharp-Reflection/bin
+/Sample_Project/Bulk-Operation-Using-CSharp-Reflection/obj
