--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-﻿################################################################################
-# This .gitignore file was automatically created by Microsoft(R) Visual Studio.
-################################################################################
-
-/Sample_Project/.vs
-/Sample_Project/Bulk-Operation-Using-CSharp-Reflection/bin
-/Sample_Project/Bulk-Operation-Using-CSharp-Reflection/obj
+﻿Created-Tools/CsvGenerator/.vs/
+Created-Tools/CsvGenerator/CsvGenerator/bin/
+Created-Tools/CsvGenerator/CsvGenerator/obj/
