--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-﻿Created-Tools/CsvGenerator/.vs/
-Created-Tools/CsvGenerator/CsvGenerator/bin/
-Created-Tools/CsvGenerator/CsvGenerator/obj/
+﻿.vs
+bin
+obj
